# Hybrid-AI-Trading

./: .aider.chat.history.md  .aider.input.history  .backup_branch_protection_main.20251107_124901.json  .ci_nudge_20251027_195148.txt  .ci_nudge_fixpip_20251027_195737.txt  .coverage  .coverage-news  .coveragerc  .editorconfig  .env  .env.example  .flake8  .gitattributes  .gitignore  .gitignore.backup-20250919_210751  .gitmodules  .pre-commit-config.yaml  .python-version  .secrets.baseline  .txt  19121903074.summary.txt  19122001667.summary.txt  19122067186.summary.txt  19122139291.summary.txt  19122149720.summary.txt  BASELINE_META.yml  CHANGELOG.md  CI_TRIGGER_PRECOMMIT.txt  CI_TRIGGER_PRECOMMIT_PORTABLE.txt  COMMIT_GUIDE.md  HybridAI_Main.ipynb  HybridAI_clean_.ipynb  Notebook.ipynb  PR_BODY_CLEAN.md  PR_BODY_FEATURE.md  Portfolio_Backtest_.ipynb  README.md  Research Notebook  Slack-Integration-Notes.txt  Stock_analysis.ipynb  (+72 more)
.aider.tags.cache.v4/: cache.db-shm  cache.db-wal
.ci/: sitecustomize_loaded.txt  trigger-20251102_000905.txt
.github/: ci_touch  ci_touch_py312_keep_minimal  ci_touch_py312_now  ci_touch_py312_ok  ci_touch_py312_sync5  ci_touch_py312_sync8  ci_touch_starlette_unpin_sync  ci_touch_starlette_unpin_sync2  dependabot.yml
.ipynb_checkpoints/: HybridAI_clean_-checkpoint.ipynb  Notebook-checkpoint.ipynb  Portfolio_Backtest_-checkpoint.ipynb  Stock_analysis-checkpoint.ipynb  check_env-checkpoint.py  forex_strategy-checkpoint.ipynb  import_library_-checkpoint.ipynb  leverage_test-checkpoint.ipynb  python-checkpoint.ipynb  stock_strategy-checkpoint.ipynb  test_strategy-checkpoint.ipynb
.logs/: console_20251015_172933.txt  console_20251015_173042.txt  paper_run_console.txt
.state/: demo.json
.tmp/: probe_daily_loss.py
.tools/: commit-template.txt  test_pattern.ps1
_safe/: collect_cryptocompare.py  debug_coinapi_20250817_093056.py  debug_cryptocompare.py  debyg_cryptocompare.py  frbug_cryptocompare.py  trade_engine_old.py
archive/: collect_cryptocompare_broken.py  debug_coinapi_20250817_093056.py  debug_cryptocompare.py  debyg_cryptocompare_broken.py  frbug_cryptocompare.py  paper_order_20251005_211410.py  paper_order_20251005_211853.py  paper_order_20251005_212214.py  paper_order_restore_20251005_212610.py  test_algos_full.py  test_algos_wrapper.py  test_all_feeds.py  test_alpaca_connection.py  test_alpaca_order.py  test_backtest_pipeline.py  test_black_swan_guard.py  test_bootstrap.py  test_breakout_signals_full.py  test_client_edge_cases.py  test_clients_full.py  test_config.py  test_crypto_demo.py  test_env.py  test_execution_engine_llvm_stubs.py  test_execution_engine_suite.py  test_execution_suite.py  test_export_leaderboard_success_and_failures.py  test_exposure_isolated.py  test_gatescore_full.py  test_iceberg_executor_full.py  test_kelly_sizer_full.py  test_leaderboard_extra.py  test_main.py  test_paper_trade_demo.py  test_performance_tracker_full.py  test_profitability_guardrails.py  test_quant_engine.py  test_regime_detector_full.py  test_risk_manager_legacy.py  test_risk_manager_micro.py  (+14 more)
ci_artifacts/: pytest_output.txt
config/: config.yaml  config.yaml.bak_20251001_165652  config.yaml.bak_20251001_170312  config.yaml.bak_20251001_185818  notion_ids.json  paper_runner.yaml  replay.yaml  symbol_presets.yaml  universe_equities.yaml  yt_channels.txt
configs/: config.yaml
data/: AAPL_1m.csv  SPY_1m_2025-10.csv  SPY_1m_sample.csv  check_packages.py  prev_close_20250824_132056.csv  prev_close_20250824_132056.json  prev_close_20250824_132152.csv  prev_close_20250824_132152.json  prev_close_20250824_151310.csv  prev_close_20250824_151310.json  prev_close_20250824_151910.csv  prev_close_20250824_151910.json  prev_close_20250824_234126.csv  prev_close_20250824_234126.json  replay_log.ndjson
docs/: AAPL_ORB_Notion_View_Spec.md  BlockG_Contract_Semantics.md  CHANGELOG.md  CI-Nightly.md  IB_Paper_Phase5_Wiring.md  NVDA_BPLUS_Notion_View_Spec.md  Notion-Phase5-Formulas.txt  Notion_NVDA_LIVE_EV_PnL.md  PATCHLOG.md  PHASE5_RISK_DASHBOARD.md  PHASE5_TOOLS.md  Phase2_Microstructure_Fields_SPY_QQQ.md  Phase2_Microstructure_Plan.md  Phase5_AAR_Views_SPY_QQQ.md  Phase5_BlockG_LivePlaybook.md  Phase5_CI_Spec.md  Phase5_EV_Tuning.md  Phase5_EvTuning_Snapshot.md  Phase5_NVDA_PaperEvPolicy.md  Phase5_RiskConfig_Sketch.md  Phase5_RiskGuards.md  PhaseRoadmap_Summary.md  ROADMAP.md  SPY_ORB_Phase5_Config.md  notion_journal_template.md
ingestion/: fetch_earnings_benzinga.py  fetch_insiders_quiver.py
logs/: backtest_results.csv  demo_results.csv  intraday_backtest_multi.csv
market_logs/: AAPL_ticks.csv
pipelines/: exit_runner.py  intraday_runner.py
reports/: ev_band_config_snapshot_20251203_170241.txt  ev_band_snapshot_20251203_170044.txt  journal_20251029_163020.csv  journal_20251029_164053.csv  journal_main_20251029_165410.csv  journal_quick_20251029_164507.csv  nvda_ev_band_tuning_notes.txt  pnl_main_20251029_165410.csv  pnl_quick_20251029_164507.csv  portfolio_report_20250830_174621.xlsx  strategy_leaderboard.xlsx
research/: aapl_orb_vwap_replay_trades_enriched.jsonl  nvda_bplus_replay_trades.raw_multi.jsonl  nvda_bplus_replay_trades_g0.04_enriched.jsonl
research-env/: pyvenv.cfg
risk/: daily_targeting.py  guardrails.py  kill_switch.py
scripts/: IBG_KeepAlive.xml  Set-StopLatch.ps1  Start-IBG-and-Probe.ps1  Start-PaperLoop.ps1  Status-PaperLoop.ps1  Stop-PaperLoop.ps1  Tail-PaperLogs.ps1  __hello.ps1  _add_lexicon_cfg.py  _bump_sweep_cfg.py  _ensure_news_cfg.py  _gate_probe.py  _ib_connect_probe.py  _ib_route_smoke.py  _import_sanity.py  _patch_news_config.py  _update_sweep_cfg.py  _update_sweep_symbols.py  activate_safe.ps1  auction_orders.py  audit_providers.ps1  audit_tree.ps1  backfill_sentiment.py  backtest_analysis.py  backtest_breakout.py  backtest_harness.py  backtest_intraday.py  (+221 more)
(+1036 files in other folders)
