# ===============================
# Build System
# ===============================
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

# ===============================
# Pytest Options
# ===============================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
pythonpath = ["src"]

addopts = [
    "--maxfail=1",
    "--disable-warnings",
    "--import-mode=importlib",
    "--cov=hybrid_ai_trading",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=95",
    "-ra",
    "-q",
    "-s"
]

# ===============================
# Coverage Settings
# ===============================
[tool.coverage.run]
branch = true
source = ["hybrid_ai_trading"]
omit = [
    "src/__init__.py",
    "src/core_init_.py",
    "src/hybrid_ai_trading/config/*"
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 95
precision = 2

[tool.coverage.paths]
source = [
    "src/hybrid_ai_trading",
    "*/site-packages/hybrid_ai_trading"
]

# Per-module enforcement
[tool.coverage.fail_under]
"hybrid_ai_trading.risk.*" = 100
"hybrid_ai_trading.execution.*" = 100
"hybrid_ai_trading.trade_engine" = 100
"hybrid_ai_trading.pipelines.backtest" = 100

# ===============================
# Warnings Handling
# ===============================
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning"
]

# ===============================
# Custom Markers
# ===============================
markers = [
    "unit: fast, isolated tests (no DB, no network)",
    "integration: multi-module tests (slower, may use DB or APIs)",
    "db: tests that require database/SQLAlchemy",
    "perf: performance/stress tests",
    "trading: strategy/trading logic tests",
    "risk: risk management tests",
    "style: lint/style checks (flake8, black, isort)"
]

# ===============================
# Runtime Control
# ===============================
timeout = 15

# ===============================
# Logging
# ===============================
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# ===============================
# Flake8 (Strict Hedge-Fund Style)
# ===============================
[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", ".venv"]
max-complexity = 10
select = ["E", "F", "W", "C90"]

# ===============================
# Black (Auto Formatter)
# ===============================
[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
skip-string-normalization = false

# ===============================
# isort (Import Sorting)
# ===============================
[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]

[project]
name = "hybrid-ai-trading"
version = "0.0.0"
description = "Hybrid AI Trading"
requires-python = ">=3.12"
[project.optional-dependencies]
backtest = ["matplotlib>=3.8"]
llvm     = ["llvmlite>=0.43"]
db       = ["SQLAlchemy>=2.0"]
all      = [
    "matplotlib>=3.8",
    "llvmlite>=0.43",
    "SQLAlchemy>=2.0",
]
